pin orchestrator to version 1.3.6
This is the latest stable version before 2.0. The latest version
contains some braking changes that need to be incorporated into the
example orchestrator first.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,7 +127,7 @@ services:
 
   orchestrator:
     &orchestrator
-    image: "ghcr.io/workfloworchestrator/orchestrator-core:latest"
+    image: "ghcr.io/workfloworchestrator/orchestrator-core:1.3.6"
     env_file: ./docker/orchestrator/orchestrator.env
     ports:
       - "8080:8080"
