move OAUTH2_ACTIVE from docker compose to orchestrator env

--- a/docker/orchestrator/orchestrator.env
+++ b/docker/orchestrator/orchestrator.env
@@ -5,3 +5,4 @@ TRANSLATIONS_DIR="/home/orchestrator/translations"
 WEBSOCKET_BROADCASTER_URL="redis://:nwa@redis:6379"
 NETBOX_TOKEN=e744057d755255a31818bf74df2350c26eeabe54
 NETBOX_URL=http://netbox:8080/
+OAUTH2_ACTIVE=False
