Adds all required environment variables to run the UI. Adds a commented section containing the auth related environment variables

--- a/docker/orchestrator-ui/orchestrator-ui.env
+++ b/docker/orchestrator-ui/orchestrator-ui.env
@@ -1,5 +1,15 @@
-AUTH_ACTIVE=false
-ORCHESTRATOR_GRAPHQL_HOST=http://localhost:8080
 ENVIRONMENT_NAME="Example Orchestrator"
+
 ORCHESTRATOR_API_HOST=http://localhost:8080
+ORCHESTRATOR_API_PATH=/api
+ORCHESTRATOR_GRAPHQL_HOST=http://localhost:8080
+ORCHESTRATOR_GRAPHQL_PATH=/api/graphql
 NEXTAUTH_SECRET=ToDo
+
+AUTH_ACTIVE=false
+# AUTH_ACTIVE=true
+# NEXTAUTH_ID="keycloak"
+# NEXTAUTH_CLIENT_ID="orchestrator-client"
+# NEXTAUTH_CLIENT_SECRET="Todo"
+# NEXTAUTH_ISSUER="http://localhost:8085/realms/myrealm"
+# NEXTAUTH_URL="http://localhost:3000/api/auth"
