--- a/docker/orchestrator/orchestrator.env
+++ b/docker/orchestrator/orchestrator.env
@@ -6,3 +6,5 @@ WEBSOCKET_BROADCASTER_URL="redis://:nwa@redis:6379"
 NETBOX_TOKEN=e744057d755255a31818bf74df2350c26eeabe54
 NETBOX_URL=http://netbox:8080/
 OAUTH2_ACTIVE=False
+LSO_PLAYBOOK_URL=http://localhost:8001/api/playbook
+ORCHESTRATOR_URL=http://localhost:8080/
