--- a/docker/lso/Dockerfile
+++ b/docker/lso/Dockerfile
@@ -6,6 +6,8 @@ RUN apk add --update --no-cache gcc libc-dev libffi-dev
 
 RUN pip install orchestrator-lso=="1.0.2"
 
+RUN ansible-galaxy collection install netbox.netbox
+
 EXPOSE 8000
 ENTRYPOINT []
 CMD ["python", "-m",  "uvicorn", "lso.app:app", "--host", "0.0.0.0", "--port", "8000"]
