--- a/docker/lso/config.json
+++ b/docker/lso/config.json
@@ -1,3 +1,3 @@
 {
-  "ansible_playbooks_root_dir": "/app/gap/ansible/ansible_collections/playbooks"
+  "ansible_playbooks_root_dir": "/app/wfo/ansible/"
 }
