--- a/docker/orchestrator/orchestrator.env
+++ b/docker/orchestrator/orchestrator.env
@@ -7,4 +7,4 @@ NETBOX_TOKEN=e744057d755255a31818bf74df2350c26eeabe54
 NETBOX_URL=http://netbox:8080/
 OAUTH2_ACTIVE=False
 LSO_PLAYBOOK_URL=http://example-orchestrator-lso-1:8000/api/playbook
-ORCHESTRATOR_URL=http://example-orchestrator-orchestrator-1:8080/
+ORCHESTRATOR_URL=http://example-orchestrator-orchestrator-1:8080
