Fixes on ISIS config for nodes and core_links

--- a/ansible/plays_and_roles/create_core_link.yaml
+++ b/ansible/plays_and_roles/create_core_link.yaml
@@ -58,7 +58,7 @@
            value:
              interface: 
                name: "{{local_port.port_name}}.0"
-         - path: "/network-instance[name=default]/protocols/isis/instance[name=default]/interface[interface-name={{local_port.port_name}}]"
+         - path: "/network-instance[name=default]/protocols/isis/instance[name=default]/interface[interface-name={{local_port.port_name}}.0]"
            value:
              admin-state: enable
      register: response
