--- a/ansible/plays_and_roles/delete_core_link.yaml
+++ b/ansible/plays_and_roles/delete_core_link.yaml
@@ -25,42 +25,13 @@
      ansible.builtin.debug:
        msg: "{{local_port}}"
      when: debug|ansible.builtin.bool is true
-   - name: Build the queries
-     ansible.builtin.set_fact:
-        api_v6_filter: "id={{local_port.ipv6_ipam_id}}" 
-   - name: Get the addresses from netbox
-     ansible.builtin.set_fact:
-        port_ipv6_address_object: "{{ query('netbox.netbox.nb_lookup', 'ip-addresses', 
-                                      api_endpoint=netbox_url, api_filter=api_v6_filter , 
-                                      token=netbox_token) }}" 
-   - name: Assign addresses to variables
-     ansible.builtin.set_fact:
-        port_ipv6_address: "{{port_ipv6_address_object[0].address}}"
-   - name: Show IP addresses 
-     ansible.builtin.debug:
-       msg: " PORT {{local_port.port_name}} IPV6_ADDRESS IS {{port_ipv6_address}} "
+
    - name: Configure nokia device 
      nokia.srlinux.config:
-       update: 
+       delete: 
          - path: "/interface[name={{local_port.port_name}}]"
-           value:
-             admin-state: enable
-             description: "{{local_port.title}}"
-             subinterface:
-               - index: 0
-                 admin-state: enable
-                 description: "{{local_port.title}} - unit 0 "
-                 ipv6:
-                   admin-state: enable
-                   address:
-                     - ip-prefix: "{{port_ipv6_address}}"
-         - path: "/network-instance[name=default]"
-           value:
-             interface: 
-               name: "{{local_port.port_name}}.0"
+         - path: "/network-instance[name=default]/interface[name={{local_port.port_name}}.0]"
          - path: "/network-instance[name=default]/protocols/isis/instance[name=default]/interface[interface-name={{local_port.port_name}}.0]"
-           value:
-             admin-state: enable
      register: response
 
    - debug:
