Restructure clab, add correct interface names

--- a/ansible/plays_and_roles/create_node.yaml
+++ b/ansible/plays_and_roles/create_node.yaml
@@ -29,9 +29,12 @@
      ansible.builtin.set_fact:
         loopback_ipv4_address: "{{loopback_ipv4_address_object[0].address}}"
         loopback_ipv6_address: "{{loopback_ipv6_address_object[0].address}}"
-   - name: Calculate IPv4 loopback last octect - part1 
+   - name: Remove netmask from IPv4 loopback
      ansible.builtin.set_fact:
        ipv4_lo_no_slash: "{{ loopback_ipv4_address|split('/') | list() }}"
+   - name: Remove netmask from IPv6 loopback
+     ansible.builtin.set_fact:
+       ipv6_lo_no_slash: "{{ loopback_ipv6_address|split('/') | list() }}"
    - name: Calculate IPv4 loopback last octect - part2
      ansible.builtin.set_fact:
        ipv4_lo_splitted: "{{ ipv4_lo_no_slash[0]|split('.') | list() }}"
@@ -43,7 +46,7 @@
        iso_address: "49.0001.0000.0000.{{ '%04d' % (ipv4_lo_last_octect|int) }}.00"
    - name: Show IP addresses for loopback
      ansible.builtin.debug:
-       msg: " ISO ADDRESS IS {{iso_address}} - LOOPBACK IPV4_ADDRESS IS {{loopback_ipv4_address}} - LOOPBACK IPV6_ADDRESS IS {{loopback_ipv6_address}} "
+       msg: " ISO ADDRESS IS {{iso_address}} - LOOPBACK IPV4_ADDRESS IS {{ipv4_lo_no_slash[0]}} - LOOPBACK IPV6_ADDRESS IS {{ipv6_lo_no_slash[0]}} "
    - name: Configure nokia device with basic stuff
      nokia.srlinux.config:
        update: 
@@ -58,11 +61,11 @@
                  ipv4:
                    admin-state: enable
                    address:
-                     - ip-prefix: "{{loopback_ipv4_address}}"
+                     - ip-prefix: "{{ipv4_lo_no_slash[0]}}/32"
                  ipv6:
                    admin-state: enable
                    address:
-                     - ip-prefix: "{{loopback_ipv6_address}}"
+                     - ip-prefix: "{{ipv6_lo_no_slash[0]}}/128"
          - path: "/network-instance[name=default]"
            value:
              interface: 
