--- a/docker/lso/Dockerfile
+++ b/docker/lso/Dockerfile
@@ -5,10 +5,10 @@ WORKDIR /app
 RUN apk add --update --no-cache gcc libc-dev libffi-dev
 
 RUN pip install orchestrator-lso=="1.0.2" 
+
 RUN pip install pynetbox
 
-RUN ansible-galaxy collection install netbox.netbox 
-RUN ansible-galaxy collection install nokia.srlinux 
+RUN ansible-galaxy collection install nokia.srlinux -p /usr/local/lib/python3.12/site-packages/ansible_collections
 
 EXPOSE 8000
 ENTRYPOINT []
