Fix env file for UI removing hard-coded ip and inserting a placeholder as per docs in workshop

--- a/docker/orchestrator-ui/orchestrator-ui.env
+++ b/docker/orchestrator-ui/orchestrator-ui.env
@@ -1,8 +1,8 @@
 ENVIRONMENT_NAME="Example Orchestrator"
 
-ORCHESTRATOR_API_HOST=http://192.168.200.13:8080
+ORCHESTRATOR_API_HOST=http://<$LISTENING_IP>:8080
 ORCHESTRATOR_API_PATH=/api
-ORCHESTRATOR_GRAPHQL_HOST=http://192.168.200.13:8080
+ORCHESTRATOR_GRAPHQL_HOST=http://<$LISTENING_IP>:8080
 ORCHESTRATOR_GRAPHQL_PATH=/api/graphql
 NEXTAUTH_SECRET=ToDo
 
