--- a/docker/orchestrator-ui/orchestrator-ui.env
+++ b/docker/orchestrator-ui/orchestrator-ui.env
@@ -1,15 +1,21 @@
 ENVIRONMENT_NAME="Example Orchestrator"
 
-ORCHESTRATOR_API_HOST=http://<$LISTENING_IP>:8080
+ORCHESTRATOR_API_HOST=http://localhost:8080
 ORCHESTRATOR_API_PATH=/api
-ORCHESTRATOR_GRAPHQL_HOST=http://<$LISTENING_IP>:8080
+ORCHESTRATOR_GRAPHQL_HOST=http://localhost:8080
 ORCHESTRATOR_GRAPHQL_PATH=/api/graphql
 NEXTAUTH_SECRET=ToDo
 
-AUTH_ACTIVE=false
+USE_WEB_SOCKETS=false
+USE_THEME_TOGGLE=true
+SHOW_WORKFLOW_INFORMATION_LINK=true
+WORKFLOW_INFORMATION_LINK_URL="https://workfloworchestrator.org/"
+ORCHESTRATOR_WEBSOCKET_URL="ws://localhost:8080/api/ws/events"
+
+OAUTH2_ACTIVE=false
 # AUTH_ACTIVE=true
-# NEXTAUTH_ID="keycloak"
-# NEXTAUTH_CLIENT_ID="orchestrator-client"
+# NEXTAUTH_PROVIDER_ID="keycloak"
+# NEXTAUTH_PROVIDER_NAME="orchestrator-client"
 # NEXTAUTH_CLIENT_SECRET="Todo"
 # NEXTAUTH_ISSUER="http://localhost:8085/realms/myrealm"
 # NEXTAUTH_URL="http://localhost:3000/api/auth"
