Update migrations to reflect generator enhancements
Updated existing migrations with fixes from https://github.com/workfloworchestrator/orchestrator-core/pull/674

--- a/templates/node.yaml
+++ b/templates/node.yaml
@@ -12,7 +12,7 @@
 # limitations under the License.
 #
 #
-# This file describes the "Port" product
+# This file describes the "Node" product
 #
 config:
   summary_forms: true
