--- a/docker/orchestrator/orchestrator.env
+++ b/docker/orchestrator/orchestrator.env
@@ -8,3 +8,4 @@ NETBOX_URL=http://netbox:8080/
 OAUTH2_ACTIVE=False
 LSO_PLAYBOOK_URL=http://example-orchestrator-lso-1:8000/api/playbook
 ORCHESTRATOR_URL=http://example-orchestrator-orchestrator-1:8080
+FEDERATION_ENABLED=True
