--- a/docker/netbox/netbox.env
+++ b/docker/netbox/netbox.env
@@ -29,6 +29,9 @@ REDIS_INSECURE_SKIP_TLS_VERIFY=false
 REDIS_PASSWORD=nwa
 REDIS_SSL=false
 RELEASE_CHECK_URL=https://api.github.com/repos/netbox-community/netbox/releases
-SECRET_KEY=r8OwDznj!!dci#P9ghmRfdu1Ysxm0AiPeDCQhKE+N_rClfWNj
-SKIP_SUPERUSER=true
+SECRET_KEY=r8OwDznj!!dci#P9ghmRfdu1Ysxm0AiPeDCQhKE+N_rClfWNjN
+SKIP_SUPERUSER=false
+SUPERUSER_NAME=admin
+SUPERUSER_PASSWORD=admin
+SUPERUSER_API_TOKEN=e744057d755255a31818bf74df2350c26eeabe54
 WEBHOOKS_ENABLED=true
