--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -164,6 +164,7 @@ services:
       - ./docker:/home/orchestrator/etc
       - ./main.py:/home/orchestrator/main.py
       - ./settings.py:/home/orchestrator/settings.py
+      - ./graphql_federation.py:/home/orchestrator/graphql_federation.py
       - ./utils:/home/orchestrator/utils
       - ./services:/home/orchestrator/services
       - ./requirements.txt:/home/orchestrator/requirements.txt
