--- a/docker/orchestrator-ui/orchestrator-ui.env
+++ b/docker/orchestrator-ui/orchestrator-ui.env
@@ -6,16 +6,16 @@ ORCHESTRATOR_GRAPHQL_HOST=http://localhost:8080
 ORCHESTRATOR_GRAPHQL_PATH=/api/graphql
 NEXTAUTH_SECRET=ToDo
 
-USE_WEB_SOCKETS=false
+USE_WEB_SOCKETS=true
 USE_THEME_TOGGLE=true
 SHOW_WORKFLOW_INFORMATION_LINK=true
 WORKFLOW_INFORMATION_LINK_URL="https://workfloworchestrator.org/"
 ORCHESTRATOR_WEBSOCKET_URL="ws://localhost:8080/api/ws/events"
 
+OAUTH2_CLIENT_ID=""
+OAUTH2_CLIENT_SECRET=""
+NEXTAUTH_PROVIDER_ID=""
+NEXTAUTH_PROVIDER_NAME=""
+NEXTAUTH_AUTHORIZATION_SCOPE_OVERRIDE=""
+OIDC_CONF_FULL_WELL_KNOWN_URL=""
 OAUTH2_ACTIVE=false
-# AUTH_ACTIVE=true
-# NEXTAUTH_PROVIDER_ID="keycloak"
-# NEXTAUTH_PROVIDER_NAME="orchestrator-client"
-# NEXTAUTH_CLIENT_SECRET="Todo"
-# NEXTAUTH_ISSUER="http://localhost:8085/realms/myrealm"
-# NEXTAUTH_URL="http://localhost:3000/api/auth"
