--- a/docker/orchestrator/orchestrator.env
+++ b/docker/orchestrator/orchestrator.env
@@ -9,3 +9,5 @@ OAUTH2_ACTIVE=False
 LSO_PLAYBOOK_URL=http://example-orchestrator-lso-1:8000/api/playbook
 ORCHESTRATOR_URL=http://example-orchestrator-orchestrator-1:8080
 FEDERATION_ENABLED=True
+EXECUTOR=celery
+CACHE_URI="redis://:nwa@redis:6379"
