Set TESTING=false for async scheduling

--- a/docker/orchestrator/orchestrator.env
+++ b/docker/orchestrator/orchestrator.env
@@ -11,3 +11,4 @@ ORCHESTRATOR_URL=http://example-orchestrator-orchestrator-1:8080
 FEDERATION_ENABLED=True
 EXECUTOR=celery
 CACHE_URI="redis://:nwa@redis:6379"
+TESTING=false
