--- a/docker/lso/lso.env
+++ b/docker/lso/lso.env
@@ -1,4 +1,16 @@
-SETTINGS_FILENAME: /app/config.json
-ANSIBLE_COLLECTIONS_PATH: "/app/ansible"
-ANSIBLE_ROLES_PATH: "/app/ansible"
+# Environment configuration for LSO application
+
+# Ansible configuration
+ANSIBLE_PLAYBOOKS_ROOT_DIR="/app/demo/ansible/ansible_collections"
+ANSIBLE_ROLES_PATH="/app/demo/ansible"
 ANSIBLE_HOST_KEY_CHECKING: "False"
+
+# Executor configuration
+EXECUTOR="threadpool"
+MAX_THREAD_POOL_WORKERS=10
+
+# Request settings
+REQUEST_TIMEOUT_SEC=10
+
+TESTING=False
+
